[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/entities/enemies/Enemy_chaser.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/shaders/EnemySaturation.gdshader" type="Shader" id=2]
[ext_resource path="res://src/entities/enemies/Melee_enemy.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://src/entities/enemies/DamageDealer.tres" type="Material" id=5]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = false
shader_param/saturation = 0.35
shader_param/color = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 31.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.5, 31.25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33.25, 34 )

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[node name="Melee_enemy" instance=ExtResource( 1 )]
light_mask = 3
scale = Vector2( 2, 2 )
collision_mask = 6
script = ExtResource( 3 )
speed = 15000.0
charge_mult = 7.0

[node name="Sprite" parent="." index="0"]
material = SubResource( 6 )

[node name="DamageSprite" type="Sprite" parent="." index="1"]
visible = false
material = ExtResource( 5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2( -0.5, -0.25 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." index="3"]
visible = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 0.25 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.75, 1 )
shape = SubResource( 5 )

[node name="Range" type="Area2D" parent="." index="6"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 3 )

[node name="Timer_charging" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[node name="Timer_charge" type="Timer" parent="." index="8"]
wait_time = 0.5
one_shot = true

[node name="Timer_cd" type="Timer" parent="." index="9"]
wait_time = 3.0
one_shot = true

[node name="Shadow" parent="." index="11"]
position = Vector2( 0, 33.5469 )

[node name="FallHitbox" parent="." index="12"]
visible = false
collision_layer = 1
collision_mask = 1

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="Timer_charging" to="." method="_on_Timer_charging_timeout"]
[connection signal="timeout" from="Timer_charge" to="." method="_on_Timer_charge_timeout"]
